2012-10-01 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/request.xml,doc/xml/install.xml: attempting to improve the documentation

2012-09-30 Massimo Manghi <mxmanghi@apache.org>
    * tests/parsepackage.test: changed path to librivetparser.so

2012-09-29 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl: Adding command for simple quick XML fragments generation

2012-09-22 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: various methods used as
    accessors to some property variables of the class Database were not returning their values
    as expeected. This also surfaced a bug in method 'string' where a result object wasn't
    used correctly. Method 'count' failed when no keyfield was set. Since it should be possible
    to call this method also when there is no keyfield defined private method table_check is 
    returning specific error codes making possible to catch this error and ignore 
    it in 'count' (fixed bugs #53733 and #53732)
    * rivet/packages/dio/dio_Sqlite.tcl: Class Sqlite did not set the variable 'interface' to
    value 'Sqlite' as expected.

2012-09-21 Massimo Manghi <mxmanghi@apache.org>
    * doc/README: improved instruction for code examples inclusion into XML manual
    * doc/rivet-full.xml: removed

2012-09-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/pkgIndex.tcl: index file regenerated

2012-09-17 Massimo Manghi <mxmanghi@apache.org>
    * src/librivet/rivet[Crypt|WWW|List|pkgInit].c,src/parser/rivetParser.[c|h],
    src/parser/parserPkgInit.c: files for librivet and the Rivet parser moved into 
    src/librivet and src/parser.
    * src/Makefile.am,src/librivet/Makefile.am, src/parser/Makefile.am: new automake conf files
    reflect libraries reorganization.
    * src/apache-2/Makefile.am: mod_rivet builds from the newly located parser code. Is it 
    sensible to let the module depend on a real package (provided by libparser.c)?