@@ -1,5 +1,6 @@
 2012-10-01 Massimo Manghi <mxmanghi@apache.org>
     * doc/xml/request.xml,doc/xml/install.xml: attempting to improve the documentation
+    * doc/images/: Adding missing icons
 
 2012-09-30 Massimo Manghi <mxmanghi@apache.org>
     * tests/parsepackage.test: changed path to librivetparser.so
